--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^8.5.1"
+    "graphql-mqtt-subscriptions": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mqtt": "^3.0.0"
   }
 }
